[package]
name = "image-viewer_v1"
version = "1.1.0"
edition = "2024"

[dependencies]
gtk4 = { version = "0.9", features = ["v4_10"] }
glib = "0.20"

image = { version = "0.25", default-features = false, features = [
    "jpeg", "png", "gif", "bmp", "webp", "tiff"
] }

zip = { version = "2", default-features = false, features = ["deflate"] }
sevenz-rust = "0.6"

anyhow = "1.0"
log = "0.4"
env_logger = "0.11"
